// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Player: AMP Entry renders a landscape container with an amp-iframe and nested amp-img 1`] = `
<div>
  <div
    class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK"
  >
    <amp-iframe
      allowfullscreen="allowfullscreen"
      frameborder="0"
      layout="fill"
      sandbox="allow-scripts allow-same-origin"
      scrolling="no"
      src="http://foo.bar/iframe/amp"
      title="Media player"
    >
      <amp-img
        alt=""
        attribution=""
        height="16"
        layout="fill"
        placeholder="true"
        src="http://foo.bar/placeholder.png"
        width="9"
      />
      <noscript />
    </amp-iframe>
  </div>
</div>
`;

exports[`Media Player: AMP Entry renders a portrait container with amp-iframe and nested amp-img 1`] = `
<div>
  <div
    class="StyledVideoContainer-sc-13p1a4d-0 bgYHLY"
  >
    <amp-iframe
      allowfullscreen="allowfullscreen"
      frameborder="0"
      layout="fill"
      sandbox="allow-scripts allow-same-origin"
      scrolling="no"
      src="http://foo.bar/iframe/amp"
      title="Media player"
    >
      <amp-img
        alt=""
        attribution=""
        height="9"
        layout="fill"
        placeholder="true"
        src="http://foo.bar/placeholder.png"
        width="16"
      />
      <noscript />
    </amp-iframe>
  </div>
</div>
`;

exports[`Media Player: AMP Entry renders the audio skin 1`] = `
<div>
  <div
    class="StyledAudioContainer-sc-13p1a4d-1 eWtTaL"
  >
    <amp-iframe
      allowfullscreen="allowfullscreen"
      frameborder="0"
      layout="fill"
      sandbox="allow-scripts allow-same-origin"
      scrolling="no"
      src="https://www.test.bbc.com/ws/av-embeds/media/bbc_korean_radio/liveradio"
      title="Audio player"
    >
      <amp-img
        alt=""
        attribution=""
        height="16"
        layout="fill"
        placeholder="true"
        src="http://foo.bar/placeholder.png"
        width="9"
      />
      <noscript />
    </amp-iframe>
  </div>
</div>
`;

exports[`Media Player: Canonical Entry renders a landscape container with a placeholder image 1`] = `
.emotion-6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-4 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK"
  >
    <div
      class="StyledPlaceholder-sc-11nyhtu-0 ieLLhf"
    >
      <div
        class="GuidanceWrapper-sc-1wm6qsk-0 bOIpCy"
      >
        <noscript
          class="StyledNoScript-sc-1wm6qsk-2 bfNgxB"
        />
      </div>
      <button
        class="StyledPlayButton-sc-11nyhtu-1 liKYIf emotion-6 emotion-7"
      >
        <span
          class="emotion-0 emotion-1"
        >
          Play video, "Dog chases cat.", 2 minutes 30 seconds
        </span>
        <div
          aria-hidden="true"
          class="emotion-2 emotion-3"
        >
          <svg
            aria-hidden="true"
            class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
            focusable="false"
            height="12px"
            viewBox="0 0 32 32"
            width="12px"
          >
            <polygon
              points="3,32 29,16 3,0"
            />
          </svg>
        </div>
        <time
          aria-hidden="true"
          class="emotion-4 emotion-5"
          datetime="PT2M30S"
        >
          2:30
        </time>
      </button>
      <img
        alt=""
        class="emotion-8 emotion-9"
        src="http://foo.bar/placeholder.png"
      />
    </div>
  </div>
</div>
`;

exports[`Media Player: Canonical Entry renders a placeholder image with guidance 1`] = `
.emotion-6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-4 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK"
  >
    <div
      class="StyledPlaceholder-sc-11nyhtu-0 ieLLhf"
    >
      <div
        class="GuidanceWrapper-sc-1wm6qsk-0 iZttSL"
      >
        <strong
          aria-hidden="true"
          class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO guidance-message"
        >
          May contain strong language, sexual or violent content that may offend.
        </strong>
        <noscript
          class="StyledNoScript-sc-1wm6qsk-2 bfNgxB"
        />
      </div>
      <button
        class="StyledPlayButton-sc-11nyhtu-1 liKYIf emotion-6 emotion-7"
      >
        <span
          class="emotion-0 emotion-1"
        >
          May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
        </span>
        <div
          aria-hidden="true"
          class="emotion-2 emotion-3"
        >
          <svg
            aria-hidden="true"
            class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
            focusable="false"
            height="12px"
            viewBox="0 0 32 32"
            width="12px"
          >
            <polygon
              points="3,32 29,16 3,0"
            />
          </svg>
        </div>
        <time
          aria-hidden="true"
          class="emotion-4 emotion-5"
          datetime="PT2M30S"
        >
          2:30
        </time>
      </button>
      <img
        alt=""
        class="emotion-8 emotion-9"
        src="http://foo.bar/placeholder.png"
      />
    </div>
  </div>
</div>
`;

exports[`Media Player: Canonical Entry renders a portrait container with a placeholder image 1`] = `
.emotion-6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-4 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="StyledVideoContainer-sc-13p1a4d-0 bgYHLY"
  >
    <div
      class="StyledPlaceholder-sc-11nyhtu-0 ieLLhf"
    >
      <div
        class="GuidanceWrapper-sc-1wm6qsk-0 bOIpCy"
      >
        <noscript
          class="StyledNoScript-sc-1wm6qsk-2 bfNgxB"
        />
      </div>
      <button
        class="StyledPlayButton-sc-11nyhtu-1 liKYIf emotion-6 emotion-7"
      >
        <span
          class="emotion-0 emotion-1"
        >
          Play video, "Dog chases cat.", 2 minutes 30 seconds
        </span>
        <div
          aria-hidden="true"
          class="emotion-2 emotion-3"
        >
          <svg
            aria-hidden="true"
            class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
            focusable="false"
            height="12px"
            viewBox="0 0 32 32"
            width="12px"
          >
            <polygon
              points="3,32 29,16 3,0"
            />
          </svg>
        </div>
        <time
          aria-hidden="true"
          class="emotion-4 emotion-5"
          datetime="PT2M30S"
        >
          2:30
        </time>
      </button>
      <img
        alt=""
        class="emotion-8 emotion-9"
        src="http://foo.bar/placeholder.png"
      />
    </div>
  </div>
</div>
`;

exports[`Media Player: Canonical Entry renders an iframe when showPlaceholder is false 1`] = `
<div>
  <div
    class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK"
  >
    <iframe
      allow="autoplay; fullscreen"
      allowfullscreen=""
      class="StyledIframe-fuo2ed-1 jOjdak"
      scrolling="no"
      src="http://foo.bar/iframe"
      title="Media player"
    />
    <noscript />
  </div>
</div>
`;

exports[`Media Player: Canonical Entry renders the audio skin 1`] = `
<div>
  <div
    class="StyledAudioContainer-sc-13p1a4d-1 eWtTaL"
  >
    <iframe
      allow="autoplay; fullscreen"
      allowfullscreen=""
      class="StyledIframe-fuo2ed-1 jOjdak"
      scrolling="no"
      src="https://www.test.bbc.com/ws/av-embeds/media/bbc_korean_radio/liveradio"
      title="Audio player"
    />
    <noscript />
  </div>
</div>
`;

exports[`Media Player: Canonical Entry renders with no-js styles when noJsClassName prop is used 1`] = `
.emotion-6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-2 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-4 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-8 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <div
    class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK"
  >
    <div
      class="StyledPlaceholder-sc-11nyhtu-0 dDNqOp"
    >
      <div
        class="GuidanceWrapper-sc-1wm6qsk-0 kDtbWd"
      >
        <strong
          aria-hidden="true"
          class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO guidance-message"
        >
          May contain strong language, sexual or violent content that may offend.
        </strong>
        <noscript
          class="StyledNoScript-sc-1wm6qsk-2 fsOOOd"
        />
      </div>
      <button
        class="StyledPlayButton-sc-11nyhtu-1 bBTuxK emotion-6 emotion-7"
      >
        <span
          class="emotion-0 emotion-1"
        >
          May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
        </span>
        <div
          aria-hidden="true"
          class="emotion-2 emotion-3"
        >
          <svg
            aria-hidden="true"
            class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
            focusable="false"
            height="12px"
            viewBox="0 0 32 32"
            width="12px"
          >
            <polygon
              points="3,32 29,16 3,0"
            />
          </svg>
        </div>
        <time
          aria-hidden="true"
          class="emotion-4 emotion-5"
          datetime="PT2M30S"
        >
          2:30
        </time>
      </button>
      <img
        alt=""
        class="emotion-8 emotion-9"
        src="http://foo.bar/placeholder.png"
      />
    </div>
  </div>
</div>
`;

exports[`Media Player: Canonical Entry shows a loading image before the player is ready when showLoadingImage is true 1`] = `
.emotion-0 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

<div>
  <div
    class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK"
  >
    <iframe
      allow="autoplay; fullscreen"
      allowfullscreen=""
      class="StyledIframe-fuo2ed-1 lfcupi"
      scrolling="no"
      src="http://foo.bar/iframe"
      title="Media player"
    />
    <div
      class="LoadingImageWrapper-fuo2ed-0 gyUHhp"
    >
      <div
        class="emotion-0 emotion-1"
      />
    </div>
    <noscript />
  </div>
</div>
`;
